fix no content div collapse

--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -17,7 +17,7 @@
     padding: 5% 5% 3% 5%;
     font-family: serif;
     font-size: 15px;
-
+    min-width: 21em;
 }
 
 .card .card-header {
